force-app/main/default/objects/FS_OD_Show_Hide__c/FS_OD_Show_Hide__c.object-meta.xml
<CustomObject>
    <label>Show/ Hide</label>
    <nameField>
        <label>Show/ Hide Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ShowHide</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>