force-app/main/default/objects/FS_OD_Show_Hide__c/fields/beverage_id__c.field-meta.xml
<CustomField>
    <fullName>beverage_id__c</fullName>
    <label>Beverage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>