force-app/main/default/objects/FS_OD_Show_Hide__c/fields/FS_ODRecID__c.field-meta.xml
<CustomField>
    <fullName>FS_ODRecID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ODRecID</label>
    <referenceTo>FS_Outlet_Dispenser__c</referenceTo>
    <relationshipLabel>ShowHide</relationshipLabel>
    <relationshipName>ODRecID</relationshipName>
    <type>Lookup</type>
</CustomField>