force-app/main/default/objects/FS_OD_Show_Hide__c/fields/show_hide_setting__c.field-meta.xml
<CustomField>
    <fullName>show_hide_setting__c</fullName>
    <label>Show/Hide</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Show</fullName>
            </value>
            <value>
                <fullName>Hide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>